# plasma

./: .gitignore  AGENTS.md  Cargo.toml  README.md  STREAMING_ANALYSIS.md  cliff.toml  mise.toml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
app/: Cargo.toml  tauri.conf.json
app/Frameworks/FBControlCore.framework/Versions/A/: FBControlCore
app/Frameworks/FBControlCore.framework/Versions/A/Headers/: FBEventConstants.h  FBiOSTargetCommandForwarder.h  FBiOSTargetConfiguration.h
app/Frameworks/FBControlCore.framework/Versions/A/Resources/: Info.plist
app/Frameworks/FBControlCore.framework/Versions/A/_CodeSignature/: CodeResources
app/Frameworks/FBDeviceControl.framework/Versions/A/: FBDeviceControl
app/Frameworks/FBDeviceControl.framework/Versions/A/Modules/: module.modulemap
app/Frameworks/FBDeviceControl.framework/Versions/A/Resources/: Info.plist
app/Frameworks/FBDeviceControl.framework/Versions/A/_CodeSignature/: CodeResources
app/Frameworks/FBSimulatorControl.framework/Versions/A/: FBSimulatorControl
app/Frameworks/FBSimulatorControl.framework/Versions/A/Resources/: Info.plist
app/Frameworks/FBSimulatorControl.framework/Versions/A/_CodeSignature/: CodeResources
app/Frameworks/FBSimulatorControlKit.framework/Versions/A/: FBSimulatorControlKit
app/Frameworks/FBSimulatorControlKit.framework/Versions/A/Frameworks/GCDWebServers.framework/Versions/A/: GCDWebServers
app/Frameworks/FBSimulatorControlKit.framework/Versions/A/Frameworks/GCDWebServers.framework/Versions/A/Resources/: Info.plist
app/Frameworks/FBSimulatorControlKit.framework/Versions/A/Frameworks/GCDWebServers.framework/Versions/A/_CodeSignature/: CodeResources
app/Frameworks/FBSimulatorControlKit.framework/Versions/A/Headers/: FBSimulatorControlKit-Swift.h
app/Frameworks/FBSimulatorControlKit.framework/Versions/A/Modules/: module.modulemap
app/Frameworks/FBSimulatorControlKit.framework/Versions/A/Modules/FBSimulatorControlKit.swiftmodule/: arm64-apple-macos.swiftdoc  arm64-apple-macos.swiftmodule
app/Frameworks/FBSimulatorControlKit.framework/Versions/A/Modules/FBSimulatorControlKit.swiftmodule/Project/: arm64-apple-macos.swiftsourceinfo
app/Frameworks/FBSimulatorControlKit.framework/Versions/A/Resources/: Info.plist
app/Frameworks/FBSimulatorControlKit.framework/Versions/A/_CodeSignature/: CodeResources
app/Frameworks/XCTestBootstrap.framework/Versions/A/: XCTestBootstrap
app/Frameworks/XCTestBootstrap.framework/Versions/A/Resources/: Info.plist
app/Frameworks/XCTestBootstrap.framework/Versions/A/_CodeSignature/: CodeResources
app/capabilities/: default.json
app/crates/app/: Cargo.toml
app/crates/app/resources/: Plasma.icns
app/crates/app/src/: main.rs
app/crates/simulator/: Cargo.toml
app/crates/simulator/src/: lib.rs
app/crates/ui/: Cargo.toml
app/crates/ui/src/: app.rs  get_started.rs  lib.rs  main_layout.rs  theme.rs
app/crates/xcode/: Cargo.toml
app/crates/xcode/src/: lib.rs
app/frontend/src/components/: BuildAndRun.tsx
app/icons/: icon.icns
app/migrations/: 20241223100000_create_settings.sql  20241223100000_initial.sql  20241223100001_create_projects.sql
app/src/: config.rs  lib.rs  server.rs
app/src/db/: migrations.rs  mod.rs  projects.rs
app/src/db/entity/: mod.rs  projects.rs
app/src/routes/: health.rs  mod.rs  projects.rs  xcode.rs
app/src/services/: projects.rs
app/src/simulator/: mod.rs
app/src/xcode/: build.rs  discovery.rs  schemes.rs
app/tests/: xcode_integration_tests.rs
app/tests/fixtures/xcode/Plasma.xcworkspace/: contents.xcworkspacedata
app/tests/fixtures/xcode/Plasma.xcworkspace/xcshareddata/xcschemes/: Plasma Workspace.xcscheme
app/tests/fixtures/xcode/Plasma.xcworkspace/xcuserdata/pepicrft.xcuserdatad/: UserInterfaceState.xcuserstate
app/tests/fixtures/xcode/Plasma.xcworkspace/xcuserdata/pepicrft.xcuserdatad/xcschemes/: xcschememanagement.plist
app/tests/fixtures/xcode/Plasma/Plasma/: ContentView.swift  PlasmaApp.swift
app/tests/fixtures/xcode/Plasma/Plasma.xcodeproj/: project.pbxproj
app/tests/fixtures/xcode/Plasma/Plasma.xcodeproj/project.xcworkspace/xcuserdata/pepicrft.xcuserdatad/: UserInterfaceState.xcuserstate
app/tests/fixtures/xcode/Plasma/Plasma.xcodeproj/xcshareddata/xcschemes/: Plasma Project.xcscheme
app/tests/fixtures/xcode/Plasma/Plasma.xcodeproj/xcuserdata/pepicrft.xcuserdatad/xcschemes/: xcschememanagement.plist
core/: Cargo.toml
core/src/db/: migrations.rs  mod.rs  settings.rs
core/src/routes/: mod.rs
docs/: simulator-streaming.md
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/components/: BuildAndRun.tsx  GetStarted.test.tsx  (+2 more)
marketing/: analyze-design.js  eleventy.config.js  gesttalt.toml  package.json  pnpm-lock.yaml
marketing/src/: index.njk
mise/tasks/: build  dev  dev:headless
tools/plasma-stream/: Package.swift
(+20 files in other folders)
