[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Plasma Developers"]
license = "MIT"

[workspace.dependencies]
# GPUI - pinned to Zed's version
gpui = { git = "https://github.com/zed-industries/zed", rev = "v0.165.4" }
gpui-macros = "0.2.2"

# Async runtime
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros"] }
futures = "0.3"
smol = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
async-trait = "0.1"
once_cell = "1.20"
parking_lot = "0.12"
