[package]
name = "appwave-core"
version.workspace = true
edition.workspace = true

[dependencies]
# Web server
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database (SQLite)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Configuration
toml = "0.8"
directories = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Static file serving
tower-http = { version = "0.6", features = ["fs", "cors"] }
tower = "0.5"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
