[package]
name = "plasma-simulator"
version.workspace = true
edition.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Async
tokio = { workspace = true }

# Image handling for simulator frames
image = "0.25"

# Utilities
once_cell = { workspace = true }
parking_lot = { workspace = true }
