[package]
name = "plasma-ui"
version.workspace = true
edition.workspace = true

[dependencies]
gpui = { workspace = true }
gpui-macros = { workspace = true }

# Local crates
plasma-xcode = { path = "../xcode" }
plasma-simulator = { path = "../simulator" }

# Async
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
once_cell = { workspace = true }
parking_lot = { workspace = true }
